# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

static_library("renderer") {
  sources = [
    "print_render_frame_helper.cc",
    "print_render_frame_helper.h",
    "print_render_frame_helper_android.cc",
    "print_render_frame_helper_linux.cc",
    "print_render_frame_helper_mac.mm",
  ]

  if (is_os2) {
    # OS/2 uses some Linux sources, put those back.
    set_sources_assignment_filter([])
    sources += [
      "print_render_frame_helper_linux.cc",
    ]
    set_sources_assignment_filter(sources_assignment_filter)
  }

  deps = [
    "//base",
    "//components/printing/common",
    "//components/resources",
    "//content/public/common",
    "//content/public/renderer",
    "//net",
    "//printing",
    "//printing/common",
    "//third_party/blink/public:blink",
    "//third_party/blink/public/common",
    "//ui/base",
  ]
}
